# Drone-OA-IREE-ViT-Accelerator

./: .gitattributes  .gitignore  .gitmodules  .wandbrc  Dockerfile  IREE_environment.yml  LSTMNetVIT_quantization.ipynb  README.md  build_log.txt  compilation_info.txt  compile_help.txt  docker-compose.yml  environment.yml  environment_vitfly.yml  iree_compiler_plugin.cmake  iree_runtime_plugin.cmake  launch_evaluation_FPGA.bash  launch_evaluation_edit.bash  output_debug.txt  pyproject.toml  requirements.txt  set_up.sh  sweep.yaml
.devcontainer/: devcontainer.json
.docker/: Dockerfile  README.md  kria.toolchain.cmake
FPGA/: dummy_fpga_server.py  fpga_inference_server.py  fpga_link.py  fpga_server.py  fpga_server_iree.py
Host/: fpga_link.py  run_competition.py  run_competition_host.py  user_code.py  user_code_host.py
compiled_output/: input_0.npy  input_1.npy  input_2.npy  input_c_n.npy  input_h_n.npy
control/: ViTsubmodules.py  model.py  simple_flight.py  test_model.py
control/training/: train.py
control/training/config/: train.txt
docker/: Dockerfile
docs/: HOW-TO-avoid-git-problems-on-Kria.md  HOW-TO-compile-onnx-mlir-model.md  HOW-TO-cross-compile-ViT-model-for-Kria.md  HOW-TO-debug-with-GDB.md  HOW-TO-do-initial-setip-on-Kria-KR260.md  HOW-TO-import-packages-from-folder.md  HOW-TO-optimize-ViT-computations-in-hardware  HOW-TO-run-project-on-vivado.md  HOW-TO-run-the-full-project-workflow.md  HOW-TO-setup-kria-KR260.md  HOW-TO-test-host-FPGA-communication-with-UDP.md
export/: export_tensors.py
models/: HeterogeneousITALSTM.py  ITAConformer.py  ITAConformerLSTM.py  ITA_ViTSubmodules.py  converter_to_pt.py  evaluation.yaml  lstmnetvit_uint8.onnx  model.py
models/ITA/: ITA_layers.py  ITA_model.py  Index.md  layers.py
models/ITA/QAT/: ITA_model.py  ITA_softmax.py  layers.py  model.py
models/ITA/dispatch/: ITA_layers_placeholder.py
models/ITA/export/: ITA_ONNX.py  ITA_layers_export.py  ITA_model_export.py
models/ITA_single_layer/: model.py
models/ITA_single_layer/QAT/: model.py
models/ITA_single_layer_upsample_shuffle/: model.py
models/ITA_single_layer_upsample_shuffle/QAT/: model.py
models/ITA_single_layer_upsample_shuffle/QAT_only_attn/: model.py
models/ITA_single_layer_upsample_shuffle/export/: model.py
models/ITA_upsample_shuffle/: model.py
models/ITA_upsample_shuffle/QAT/: model.py
models/backup/: ITAConformer.py  ITAConformerLSTM.py  ITA_ViTSubmodules.py
models/backup/quantized/: ITA_utils.py  QAT_ITAConformerLSTM.py  QAT_LSTMNetVIT.py  quant_ready_ITAConformerLSTM.py
models/dummy/: cnn1_dense.onnx  cnn1_dense_int8.onnx  cnn2_lstm.onnx  cnn2_lstm_int8.onnx  hetero_dense.onnx  hetero_dense_int8.onnx  hetero_vit.onnx  hetero_vit_int8.onnx
models/dummy/mlir/: cnn1_dense.mlir  cnn1_dense_int8.mlir  cnn2_lstm.mlir  cnn2_lstm_int8.mlir  hetero_dense.mlir  hetero_dense_int8.mlir  hetero_vit.mlir  hetero_vit_int8.mlir
models/dummy/vmbf/: cnn1_dense_cpu.vmfb  cnn1_dense_int8_cpu.vmfb  (+3 more)
models/mlir/: debug.mlir  lstmnetvit_fp32.mlir  lstmnetvit_int8.mlir  lstmnetvit_uint8.mlir  onnx_add.mlir  sam_onnx_quantized.mlir
models/onnx/: lstmnetvit_fp32.onnx  lstmnetvit_int8.onnx
models/profiling/: aicc-compute-3_1704431.1744452800745395537.pt.trace.json  compilation_info.json  compilation_info.txt  onnxruntime_profile__2025-04-12_12-45-13.json
models/quantized/: quant_ready_ITAConformerLSTM.py  quant_ready_LSTMNetVIT.py  quant_ready_ViT_Layers.py
models/testing/: ITA_Layers.py  ITA_layers.py  ITA_model.py
models/torch/: ViTLSTM_model.pth
models/vmbf/: lstmnetvit_f16.vmfb  lstmnetvit_f16_optimized_debug.vmfb  lstmnetvit_fp32.vmfb  sam_quantized_cpu.vmfb
notebooks/: 8bitquantization.ipynb  LSTMNetVIT_quantization.ipynb  hetero_models_export.ipynb  ita_model.ipynb  model_dummy_example.ipynb  qat.ipynb  testing_vit.ipynb
output/: compilation_info.txt
runtime/src/: CMakeLists.txt
samples/: CMakeLists.txt
samples/custom_dispatch/: CMakeLists.txt
samples/inference/: CMakeLists.txt  README.md  main.cpp
samples/inference_trainingset_comparison/: main.cpp  main_with_udp.cpp
samples/inference_trainingset_custom_dispatch/: CMakeLists.txt  main.cpp
samples/inference_trainingset_custom_dispatch/plugin/: CMakeLists.txt  dummy_dispatch.c  dummy_spec copy.mlir  dummy_spec.mlir
samples/inference_udp_FPGA/: CMakeLists.txt  README.md  main.cpp
samples/inference_udp_FPGA_custom_dispatch/: CMakeLists.txt  main.cpp
samples/inference_udp_FPGA_custom_dispatch/plugin/: CMakeLists.txt  ITA_dispatch.c  ITA_spec.mlir
samples/test/FPGA_HOST_communication/: CMakeLists.txt  dummy_inference.hpp  server.cpp
samples/test/inference/: CMakeLists.txt  main.cpp
samples/test/inference_FPGA_HOST_communication/: CMakeLists.txt  fpga_link.hpp  post_processing.hpp  pre_processing.hpp  preprocessing.hpp  server.cpp
samples/utils/: CMakeLists.txt  libs.cpp
scripts/: compilation_info.json  compilation_info.txt  compile.sh  compile_flow_dummy_models.sh  export_model.py  qa_train.py
tests/: Index.md  check_quantization.py  export_and_validation_W_B.py  export_onnx.py  export_onnx_for_FPGA.py  export_placeholder_to_onnx.py  export_tensors_tb.py  export_tensors_tb_testing.py  export_tired.py  export_torch_mlir.py  export_turbine.py  i_want_vacations.py  inspect_quantized_model.py  onnx_ITA_verification.py  onnx_export_tensors_tb.py  onnx_param_extractor.py  quantize_ptq.py  quantize_ptq_onnx.py  tuki.py
tests/onnx_backup/: check_quantization_onnx.py  onnx_ITA_verification.py  quantize_ptq_onnx.py
tests/p2e_backup/: ita_quantization_specs.py  ita_quantizer.py  quantize_ita_model_torchao.py
torch_model/: ITA_layers.py  ITA_model.py
train_set/175240906072/: data.csv
train_set/175241217467/: data.csv
train_set/175241263240/: data.csv
train_set/175241272298/: data.csv
train_set/175328106578/: data.csv
train_set/175328133336/: data.csv
train_set/175329872504/: data.csv
train_set/175330073497/: data.csv
train_set/175330083602/: data.csv
training/: README.md  qa_train.py
training/config/: qat.txt  train.txt
(+8 files in other folders)
